--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -7,8 +7,8 @@
 @use 'utils';
 @use 'header';
 @use 'jumbotron';
-@use 'comics';
-@use 'show';
+@use 'comics_index';
+@use 'comics_show';
 @use 'shopping';
 @use 'footer_top';
 @use 'footer_bottom';
