added comics create scss

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -9,6 +9,7 @@
 @use 'jumbotron';
 @use 'comics_index';
 @use 'comics_show';
+@use 'comics_create';
 @use 'shopping';
 @use 'footer_top';
 @use 'footer_bottom';
