--- a/resources/scss/_comics_create.scss
+++ b/resources/scss/_comics_create.scss
@@ -1,25 +1,56 @@
 @use 'resources/scss/vars' as *;
 
-.card-title {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+#add-comic {
+    padding: 50px;
 
-    h1 {
-        font-size: 35px;
-        color: $blue;
+    .card-title {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-bottom: 1px solid black;
+
+        h1 {
+            font-size: 35px;
+            color: $blue;
+        }
+
+        .button {
+            margin: 40px 0;
+
+            a {
+                font-size: 18px;
+                text-transform: uppercase;
+                color: white;
+                width: 200px;
+                padding: 10px 50px;
+                background-color: $blue;
+            }
+        }
     }
 
-    .button {
-        margin: 40px 0;
+    .card-body {
 
-        a {
-            font-size: 18px;
-            text-transform: uppercase;
-            color: white;
-            width: 200px;
-            padding: 10px 50px;
-            background-color: $blue;
+        form {
+
+            .input-section {
+                display: flex;
+                flex-direction: column;
+                margin: 20px 0;
+
+                label {
+                    font-size: 25px;
+                    font-weight: 800;
+                    color: $blue;
+                    margin-bottom: 5px;
+                }
+
+                input {
+                    font-size: 16px;
+                    padding: 10px;
+                    border-radius: 10px;
+                    width: 50%;
+                }
+            }
         }
     }
 }
