--- a/resources/scss/_comics_create.scss
+++ b/resources/scss/_comics_create.scss
@@ -50,6 +50,13 @@
                     border-radius: 10px;
                     width: 50%;
                 }
+
+                textarea {
+                    font-size: 16px;
+                    padding: 10px;
+                    border-radius: 10px;
+                    width: 50%;
+                }
             }
         }
     }
