--- a/resources/scss/_comics_create.scss
+++ b/resources/scss/_comics_create.scss
@@ -58,6 +58,28 @@
                     width: 50%;
                 }
             }
+
+            .form-buttons {
+                padding-top: 20px;
+                border-top: 1px solid black;
+
+                button {
+                    font-size: 16px;
+                    color: white;
+                    padding: 10px;
+                    border-radius: 10px;
+                    cursor: pointer;
+
+                    &.btn-reset {
+                        background-color: $blue;
+                        margin-right: 10px;
+                    }
+
+                    &.btn-save {
+                        background-color: green;
+                    }
+                }
+            }
         }
     }
 }
