added comics edit scss

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -10,6 +10,7 @@
 @use 'comics_index';
 @use 'comics_show';
 @use 'comics_create';
+@use 'comics_edit';
 @use 'shopping';
 @use 'footer_top';
 @use 'footer_bottom';
