--- a/resources/scss/_comics_show.scss
+++ b/resources/scss/_comics_show.scss
@@ -214,19 +214,27 @@
     .add-btn {
         display: flex;
         justify-content: center;
+        align-items: center;
+        gap: 20px;
+        margin-top: 60px;
 
-        .button {
-            margin-top: 60px;
+        a {
+            font-size: 18px;
+            text-transform: uppercase;
+            color: white;
+            width: 200px;
+            padding: 10px 50px;
+            background-color: $blue;
+        }
 
-            a {
-                font-size: 18px;
-                text-transform: uppercase;
-                color: white;
-                width: 200px;
-                padding: 10px 50px;
-                background-color: $blue;
-            }
-
+        input {
+            font-size: 18px;
+            text-transform: uppercase;
+            color: white;
+            padding: 10px 50px;
+            background-color: red;
+            border: none;
+            cursor: pointer;
         }
     }
 }
