--- a/resources/scss/_comics_show.scss
+++ b/resources/scss/_comics_show.scss
@@ -51,6 +51,20 @@
 #comic-detail {
     padding: 60px 0;
 
+    .button {
+        display: flex;
+        justify-content: center;
+
+        a {
+            font-size: 18px;
+            margin-bottom: 20px;
+            text-transform: uppercase;
+            color: white;
+            padding: 10px 50px;
+            background-color: $blue;
+        }
+    }
+
     .wrapper-top {
         display: flex;
         justify-content: center;
